Added header from freelancer template.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,22 @@
             </div>
             <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
+
+        <!-- Header -->
+        <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <div class="intro-text">
+                        <span class="name">JOSEAN ARROYO</span>
+                        <hr class="star-light">
+                        <span class="skills">Web Developer - Graphic Designer - Illustrator</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     </nav>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
