--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lobster|Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -24,7 +24,7 @@
     <![endif]-->
   </head>
   <body>
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-fixed-top navbar-bg">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -44,16 +44,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">About</a>
+                        <a href="#portfolio">ABOUT</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Skills</a>
+                        <a href="#about">SKILLS</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Portfolio</a>
+                        <a href="#contact">PORTFOLIO</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -65,11 +65,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">JOSEAN ARROYO</span>
-                        <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Designer - Illustrator</span>
+                        <span class="name">Josean Arroyo</span>
+                        <br />
+                        <span class="skills">Web Developer &nbsp;&nbsp;&nbsp;Graphic Designer &nbsp;&nbsp;&nbsp;Illustrator</span>
                     </div>
                 </div>
             </div>
@@ -174,7 +173,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
