--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <![endif]-->
   </head>
   <body>
-        <nav class="navbar navbar-default navbar-fixed-top navbar-bg">
+        <nav class="navbar navbar-default navbar-fixed-top navbar-jmo">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
