--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">ABOUT</a>
+                        <a href="#about">ABOUT</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">SKILLS</a>
+                        <a href="#skills">SKILLS</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">PORTFOLIO</a>
+                        <a href="#portfolio">PORTFOLIO</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">CONTACT</a>
@@ -62,7 +62,7 @@
     </nav>
         <!-- Header -->
         <header>
-        <div class="container">
+        <div class="container home-jmo">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
@@ -81,7 +81,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <br />
+                    <br />
                 </div>
             </div>
             <div class="row">
@@ -106,7 +107,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
-                    <hr class="star-primary">
+                    <br />
+                    <br />
                 </div>
             </div>
             <div class="row">
@@ -180,7 +182,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
-                    <hr class="star-primary">
+                  <br />
+                  <br />
                 </div>
             </div>
             <div class="row">
