--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Josean Arroyo</title>
 
     <!-- Main Styles -->
     <link href="css/main.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Amatic+SC|Montserrat:400,700|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Amatic+SC:400,700|Marvel:400,400italic,700|Boogaloo' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,13 +59,14 @@
     </nav>
         <!-- Header -->
         <header>
-        <div class="container home-jmo">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <h1 class="name">Josean Arroyo</h1>
-                        <br />
-                        <span class="skills">Web Developer &nbsp;&nbsp;&nbsp;Graphic Designer &nbsp;&nbsp;&nbsp;Illustrator</span>
+                        <p>Web Developer</p>
+                        <p>Graphic Designer</p>
+                        <p>Illustrator</p>
                     </div>
                 </div>
             </div>
