--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>I Want To Tell You</h2>
+                    <p>all about me</p>
                     <br />
                     <br />
                 </div>
@@ -105,7 +106,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>A Day In The Life</h2>
+                    <p>my portfolio</p>
                     <br />
                     <br />
                 </div>
@@ -180,9 +182,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
-                  <br />
-                  <br />
+                    <h2>Got To Get You Into My Life</h2>
+                    <p>so contact me soon</p>
+                    
                 </div>
             </div>
             <div class="row">
