Added portfolio markup, styles and scripts.

--- a/index.html
+++ b/index.html
@@ -113,65 +113,69 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                <div class="col-lg-12 text-center">
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/manati-medical-website.jpg" alt="Manati Medical Website">
                         </div>
-                        <img src="http://lorempixel.com/640/480/sports" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                        <div class="project-desc">
+                            Responsive website for Manatí Medical Center.<br>
+                            <a href="http://manatimedical.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
                         </div>
-                        <img src="http://lorempixel.com/640/480/people" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/serralles-website.jpg" alt="Destilería Serrallés Website">
                         </div>
-                        <img src="http://lorempixel.com/640/480/city" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                        <div class="project-desc">
+                            Responsive website for Destilería Serrallés.<br>
+                            <a href="http://serralles.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
                         </div>
-                        <img src="http://lorempixel.com/640/480/animals" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/faccio-pizza-website.jpg" alt="Faccio Pizza Website">
                         </div>
-                        <img src="http://lorempixel.com/640/480/nature" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                        <div class="project-desc">
+                            Website for Faccio Pizza.<br>
+                            <a href="http://facciopizza.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
                         </div>
-                        <img src="http://lorempixel.com/640/480/cats" class="img-responsive" alt="">
-                    </a>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="http://lorempixel.com/1024/768/city" alt="ALT GOES HERE">
+                        </div>
+                        <div class="project-desc">
+                            Lorem ipsum dolor sit amet.<br>
+                            <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="http://lorempixel.com/1024/768/nature" alt="ALT GOES HERE">
+                        </div>
+                        <div class="project-desc">
+                            Lorem ipsum dolor sit amet.<br>
+                            <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="http://lorempixel.com/1024/768/cats" alt="ALT GOES HERE">
+                        </div>
+                        <div class="project-desc">
+                            Lorem ipsum dolor sit amet.<br>
+                            <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
+                        </div>
+                    </div>
+
+                    <a id="more" class="btn btn-primary">See more</a>
                 </div>
             </div>
         </div>
@@ -286,6 +290,7 @@
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/vendor/jquery.lazyload.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
