--- a/index.html
+++ b/index.html
@@ -81,22 +81,20 @@
                 <div class="col-lg-12 text-center">
                     <h2>I Want To Tell You</h2>
                     <p>all about me</p>
-                    <br />
-                    <br />
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div>
+
+            <div class="aboutbox">
+               <div class="row">
+                 <div class="col-lg-12">
+                        <p>As you already know from the big words on the top of this page, my name is Josean Arroyo.</p>
+
+                         <p>I am a graphic designer, front-end developer and illustrator. What does that mean? That I have a lot of fun making designs, websites and drawings for you!</p>
+
+                          <p>I have been trained to deliver professional beautiful results to make you look awesome! I even have proof. Just keep scrolling.</p>
+                 </div>
+               </div>
+                <div class="mypic"><img src="images/jmorest.png" alt="josean" ></div>
             </div>
         </div>
     </section>
@@ -184,7 +182,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Got To Get You Into My Life</h2>
                     <p>so contact me soon</p>
-                    
+
                 </div>
             </div>
             <div class="row">
