Removed success class. Added #skills section.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </header>
 
         <!-- About Section -->
-    <section class="success" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -84,17 +84,28 @@
                 </div>
             </div>
 
-            <div class="aboutbox">
-               <div class="row">
+            <div class="row">
                  <div class="col-lg-12">
+                    <div class="aboutbox">
                         <p>As you already know from the big words on the top of this page, my name is Josean Arroyo.</p>
 
                          <p>I am a graphic designer, front-end developer and illustrator. What does that mean? That I have a lot of fun making designs, websites and drawings for you!</p>
 
                           <p>I have been trained to deliver professional beautiful results to make you look awesome! I even have proof. Just keep scrolling.</p>
+                    </div>
                  </div>
-               </div>
                 <div class="mypic"><img src="images/jmorest.png" alt="josean" ></div>
+        </div>
+    </section>
+
+            <!-- Skills Section -->
+    <section id="skills">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>I Want To Tell You</h2>
+                    <p>all about me</p>
+                </div>
             </div>
         </div>
     </section>
