Fixed about section and whitespace.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-        <nav class="navbar navbar-default navbar-fixed-top">
+</head>
+<body>
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -57,8 +57,9 @@
             <!-- /.navbar-collapse -->
         </div>
     </nav>
-        <!-- Header -->
-        <header>
+
+    <!-- Header -->
+    <header>
 
         <div class="container">
             <div class="row">
@@ -74,7 +75,7 @@
         </div>
     </header>
 
-        <!-- About Section -->
+    <!-- About Section -->
     <section id="about">
         <div class="container">
             <div class="row">
@@ -83,22 +84,23 @@
                     <p>all about me</p>
                 </div>
             </div>
-
             <div class="row">
-                 <div class="col-lg-12">
+                <div class="col-lg-12">
                     <div class="aboutbox">
                         <p>As you already know from the big words on the top of this page, my name is Josean Arroyo.</p>
 
-                         <p>I am a graphic designer, front-end developer and illustrator. What does that mean? That I have a lot of fun making designs, websites and drawings for you!</p>
+                        <p>I am a graphic designer, front-end developer and illustrator. What does that mean? That I have a lot of fun making designs, websites and drawings for you!</p>
 
-                          <p>I have been trained to deliver professional beautiful results to make you look awesome! I even have proof. Just keep scrolling.</p>
+                        <p>I have been trained to deliver professional beautiful results to make you look awesome! I even have proof. Just keep scrolling.</p>
+
+                        <div class="mypic"><img src="images/jmorest.png" alt="josean" ></div>
                     </div>
-                 </div>
-                <div class="mypic"><img src="images/jmorest.png" alt="josean" ></div>
+                </div>
+            </div>
         </div>
     </section>
 
-            <!-- Skills Section -->
+    <!-- Skills Section -->
     <section id="skills">
         <div class="container">
             <div class="row">
@@ -107,10 +109,15 @@
                     <p>all about me</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    
+                </div>
+            </div>
         </div>
     </section>
 
-        <!-- Portfolio Grid Section -->
+    <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
             <div class="row">
