Added contact section markup, styles and icons.

--- a/index.html
+++ b/index.html
@@ -205,11 +205,12 @@
                     <h2>Got To Get You Into My Life</h2>
                     <p>so contact me soon</p>
 
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    
+                    <div class="social">
+                        <a href="mailto:joseanarroyo@gmail.com" target="_blank"><img src="images/icons/icon-mail@2x.png" alt="mail"></a>
+                        <a href="https://www.facebook.com/jarroyor" target="_blank"><img src="images/icons/icon-facebook@2x.png" alt="facebook"></a>
+                        <a href="http://www.twitter.com/joseanarroyo" target="_blank"><img src="images/icons/icon-twitter@2x.png" alt="twitter"></a>
+                        <a href="http://www.linkedin.com/in/joseanarroyo" target="_blank"><img src="images/icons/icon-linkedin@2x.png" alt="linkedin"></a>
+                    </div>
                 </div>
             </div>
         </div>
