--- a/index.html
+++ b/index.html
@@ -105,15 +105,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>I Want To Tell You</h2>
-                    <p>all about me</p>
+                    <h2>Like Dreamers Do</h2>
+                    <p>a summary of my skills</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    
+                <div class="col-md-4 text-center">
+                    <div class="skill-img">
+                        <img src="images/illus-icon.jpg" alt="illustration">
+                    </div>
+
+                    <div class="skill-desc blue">
+                        <h3>Illustration</h3>
+                        <p>Ready to take <em>ideas</em> and turn them into <em>creations</em></p>
+                        <p>Great variety of illustration <em>styles</em> to fit your needs</p>
+                        <p>Extensive experience and education in drawing</p>
+                    </div>
+                <img src="images/divider.jpg" alt="divider">
+                </div>
+
+                <div class="col-md-4 text-center">
+                    <div class="skill-img">
+                        <img src="images/web-icon.jpg" alt="web design">
+                    </div>
+
+                    <div class="skill-desc yellow">
+                        <h3>Web Design</h3>
+                        <p>Skilled in <em>responsive</em> web design and development</p>
+                        <p><em>Passionate</em> about clean, readable and maintable code</p>
+                        <p>Experience in front-end development</p>
+                    </div>
+                <img src="images/divider.jpg" alt="divider">                    
+                </div>
+
+                <div class="col-md-4 text-center">
+                   <div class="skill-img">
+                        <img src="images/graphic-icon.jpg" alt="graphic design">
+                    </div>
+
+                    <div class="skill-desc red">
+                        <h3>Graphic Design</h3>
+                        <p><em>Mastery</em> of design, art and visual communication</p>
+                        <p>Proficient in Photoshop, Illustrator and other tools</p>
+                        <p>Experience in front-end development</p>
+                    </div>
+                <img src="images/divider.jpg" alt="divider">  
                 </div>
             </div>
+        <img src="images/bear.jpg" alt="bear">
         </div>
     </section>
 
