Fixed bear, hid divider on md sizes and up.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <p>Great variety of illustration <em>styles</em> to fit your needs</p>
                         <p>Extensive experience and education in drawing</p>
                     </div>
-                <img src="images/divider.jpg" alt="divider">
+                <img class="divider hidden-md hidden-lg" src="images/divider.jpg" alt="divider">
                 </div>
 
                 <div class="col-md-4 text-center">
@@ -135,7 +135,7 @@
                         <p><em>Passionate</em> about clean, readable and maintable code</p>
                         <p>Experience in front-end development</p>
                     </div>
-                <img src="images/divider.jpg" alt="divider">                    
+                <img class="divider hidden-md hidden-lg" src="images/divider.jpg" alt="divider">                    
                 </div>
 
                 <div class="col-md-4 text-center">
@@ -149,10 +149,12 @@
                         <p>Proficient in Photoshop, Illustrator and other tools</p>
                         <p>Experience in front-end development</p>
                     </div>
-                <img src="images/divider.jpg" alt="divider">  
+                <img class="divider hidden-md hidden-lg" src="images/divider.jpg" alt="divider">  
                 </div>
             </div>
-        <img src="images/bear.jpg" alt="bear">
+        <div class="bear text-center">
+            <img src="images/bear.jpg" alt="bear">
+        </div>
         </div>
     </section>
 
