Finished styling #skills section.

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 
                     <div class="skill-desc blue">
                         <h3>Illustration</h3>
-                        <p>Ready to take <em>ideas</em> and turn them into <em>creations</em></p>
-                        <p>Great variety of illustration <em>styles</em> to fit your needs</p>
+                        <p>Ready to take <strong>ideas</strong> and turn them into <strong>creations</strong></p>
+                        <p>Great variety of illustration <strong>styles</strong> to fit your needs</p>
                         <p>Extensive experience and education in drawing</p>
                     </div>
-                <img class="divider hidden-md hidden-lg" src="images/divider.jpg" alt="divider">
+                <img class="divider" src="images/divider.jpg" alt="divider">
                 </div>
 
                 <div class="col-md-4 text-center">
@@ -131,11 +131,11 @@
 
                     <div class="skill-desc yellow">
                         <h3>Web Design</h3>
-                        <p>Skilled in <em>responsive</em> web design and development</p>
-                        <p><em>Passionate</em> about clean, readable and maintable code</p>
-                        <p>Experience in front-end development</p>
+                        <p>Skilled in <strong>responsive</strong> web design and development</p>
+                        <p><strong>Passionate</strong> about clean and maintable code</p>
+                        <p>Continuing experience in front-end development</p>
                     </div>
-                <img class="divider hidden-md hidden-lg" src="images/divider.jpg" alt="divider">                    
+                <img class="divider" src="images/divider.jpg" alt="divider">                    
                 </div>
 
                 <div class="col-md-4 text-center">
@@ -145,11 +145,11 @@
 
                     <div class="skill-desc red">
                         <h3>Graphic Design</h3>
-                        <p><em>Mastery</em> of design, art and visual communication</p>
+                        <p><strong>Mastery</strong> of design, art and visual communication</p>
                         <p>Proficient in Photoshop, Illustrator and other tools</p>
-                        <p>Experience in front-end development</p>
+                        <p>Proven experience in brand identity development</p>
                     </div>
-                <img class="divider hidden-md hidden-lg" src="images/divider.jpg" alt="divider">  
+                <img class="divider" src="images/divider.jpg" alt="divider">  
                 </div>
             </div>
         <div class="bear text-center">
@@ -204,30 +204,30 @@
 
                     <div class="project">
                         <div class="project-img">
-                            <img class="lazy" src="images/gray.png" data-original="http://lorempixel.com/1024/768/city" alt="ALT GOES HERE">
+                            <img class="lazy" src="images/gray.png" data-original="http://lorstrongpixel.com/1024/768/city" alt="ALT GOES HERE">
                         </div>
                         <div class="project-desc">
-                            Lorem ipsum dolor sit amet.<br>
+                            Lorstrong ipsum dolor sit amet.<br>
                             <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
                         </div>
                     </div>
 
                     <div class="project">
                         <div class="project-img">
-                            <img class="lazy" src="images/gray.png" data-original="http://lorempixel.com/1024/768/nature" alt="ALT GOES HERE">
+                            <img class="lazy" src="images/gray.png" data-original="http://lorstrongpixel.com/1024/768/nature" alt="ALT GOES HERE">
                         </div>
                         <div class="project-desc">
-                            Lorem ipsum dolor sit amet.<br>
+                            Lorstrong ipsum dolor sit amet.<br>
                             <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
                         </div>
                     </div>
 
                     <div class="project">
                         <div class="project-img">
-                            <img class="lazy" src="images/gray.png" data-original="http://lorempixel.com/1024/768/cats" alt="ALT GOES HERE">
+                            <img class="lazy" src="images/gray.png" data-original="http://lorstrongpixel.com/1024/768/cats" alt="ALT GOES HERE">
                         </div>
                         <div class="project-desc">
-                            Lorem ipsum dolor sit amet.<br>
+                            Lorstrong ipsum dolor sit amet.<br>
                             <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
                         </div>
                     </div>
