Finished styling and adding all content to #portfolio section.

--- a/index.html
+++ b/index.html
@@ -165,12 +165,21 @@
                 <div class="col-lg-12 text-center">
                     <h2>A Day In The Life</h2>
                     <p>my portfolio</p>
-                    <br />
-                    <br />
+                    <img class="bacon" src="images/bacon.png" alt="bacon friend"
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/div16-website.jpg" alt="Division16 Website">
+                        </div>
+                        <div class="project-desc">
+                            Responsive website for Division16.<br>
+                            <a href="http://division16pr.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
+                        </div>
+                    </div>
 
                     <div class="project">
                         <div class="project-img">
@@ -179,6 +188,15 @@
                         <div class="project-desc">
                             Responsive website for Manatí Medical Center.<br>
                             <a href="http://manatimedical.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/selva-website.png" alt="Selva Life Website">
+                        </div>
+                        <div class="project-desc">
+                            Website for Selva Life. Currently Offline.
                         </div>
                     </div>
 
@@ -204,33 +222,112 @@
 
                     <div class="project">
                         <div class="project-img">
-                            <img class="lazy" src="images/gray.png" data-original="http://lorstrongpixel.com/1024/768/city" alt="ALT GOES HERE">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/cep.png" alt="1st CEP">
                         </div>
                         <div class="project-desc">
-                            Lorstrong ipsum dolor sit amet.<br>
-                            <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
+                            Logo design for 1ST Choice Enrichment Program.
                         </div>
                     </div>
 
                     <div class="project">
                         <div class="project-img">
-                            <img class="lazy" src="images/gray.png" data-original="http://lorstrongpixel.com/1024/768/nature" alt="ALT GOES HERE">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/shamp.jpg" alt="Shampoodles">
                         </div>
                         <div class="project-desc">
-                            Lorstrong ipsum dolor sit amet.<br>
-                            <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
+                            Logo design for Shampoodles Pet Salon.
                         </div>
                     </div>
 
                     <div class="project">
                         <div class="project-img">
-                            <img class="lazy" src="images/gray.png" data-original="http://lorstrongpixel.com/1024/768/cats" alt="ALT GOES HERE">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/eid.jpg" alt="EID">
                         </div>
                         <div class="project-desc">
-                            Lorstrong ipsum dolor sit amet.<br>
-                            <a href="http://google.com" target="_blank">View website. <i class="fa fa-external-link"></i></a>
+                            Logo design for Escuela Internacional de Diseño.
                         </div>
                     </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/rex.jpg" alt="Restraining Order Rex">
+                        </div>
+                        <div class="project-desc">
+                            Drawing, Illustration, Brand and Poster Design for rock band.
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/bear.jpg" alt="Restraining Order Bear">
+                        </div>
+                        <div class="project-desc">
+                            Drawing, Illustration, Brand and Poster Design for rock band.
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/lion.jpg" alt="Restraining Order Lion">
+                        </div>
+                        <div class="project-desc">
+                            Drawing, Illustration, Brand and Poster Design for rock band.
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/squid.jpg" alt="Restraining Order Squid">
+                        </div>
+                        <div class="project-desc">
+                            Drawing, Illustration, Brand and Poster Design for rock band.
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/band.jpg" alt="Restraining Order Band">
+                        </div>
+                        <div class="project-desc">
+                            Drawing, Illustration, Brand and Poster Design for rock band.
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/girl.jpg" alt="Girl and Cat">
+                        </div>
+                        <div class="project-desc">
+                            Children's Illustration.
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/mari.jpg" alt="Mari and Nessie">
+                        </div>
+                        <div class="project-desc">
+                            Children's Illustration
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/iris.jpg" alt="Instituto Iris">
+                        </div>
+                        <div class="project-desc">
+                            Logo design for Instituto Iris.
+                        </div>
+                    </div>
+
+                    <div class="project">
+                        <div class="project-img">
+                            <img class="lazy" src="images/gray.png" data-original="images/portfolio/cardona.jpg" alt="Cardona Compounds">
+                        </div>
+                        <div class="project-desc">
+                            Brand identity design for Cardona Compounds.
+                        </div>
+                    </div>
+
 
                     <a id="more" class="btn btn-primary">See more</a>
                 </div>
