- Added marshmallows. - Finished styling #contact section.

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <img class="lazy" src="images/gray.png" data-original="images/portfolio/eid.jpg" alt="EID">
                         </div>
                         <div class="project-desc">
-                            Logo design for Escuela Internacional de Diseño.
+                            Poster design for Escuela Internacional de Diseño.
                         </div>
                     </div>
 
@@ -333,6 +333,9 @@
                 </div>
             </div>
         </div>
+        <div class="marsh text-center">
+            <img src="images/marsh.png" alt="marshmallows">
+        </div>
     </section>
 
     <!-- Contact Section -->
@@ -351,6 +354,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="catbox">
+            <div class="cat">
+                <img src="images/cat.png" alt="cat" >
         </div>
     </section>
 
