Grammatical error in index

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="skill-desc yellow">
                         <h3>Web Design</h3>
                         <p>Skilled in <strong>responsive</strong> web design and development</p>
-                        <p><strong>Passionate</strong> about clean and maintable code</p>
+                        <p><strong>Passionate</strong> about clean and maintainable code</p>
                         <p>Continuing experience in front-end development</p>
                     </div>
                 <img class="divider" src="images/divider.jpg" alt="divider">                    
